--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.2",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "slug": "^3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
